--- a/RNATranscription/src/main/webapp/index.html
+++ b/RNATranscription/src/main/webapp/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Expires" content="0"/>
     <!--框架必须的CSS文件,可定制化-->
     <link type="text/css" href="./theme/bootstrap/bootstrap.css" rel="stylesheet">
-    <link type="text/css" href="./theme/css/fontawesome.min.css" rel="stylesheet">
+    <link type="text/css" href="./theme/css/fontawesome-all.min.css" rel="stylesheet">
     <link type="text/css" href="./theme/css/common.css" rel="stylesheet">
 
     <!--<link type="image/x-icon" href="./theme/custom/img/favicon.ico" rel="icon"/>-->
