--- a/RNATranscription/src/main/webapp/framework/topnav/topnav.html
+++ b/RNATranscription/src/main/webapp/framework/topnav/topnav.html
@@ -9,10 +9,10 @@
 
     <!-- 登录注册 -->
     <div style="float: right;">
-        <div class="login_btn">
+        <div class="login_btn" ng-click="loginModal('登录')">
             <a>登录</a>
         </div>
-        <div class="login_btn">
+        <div class="login_btn" ng-click="loginModal('注册')">
             <a>注册</a>
         </div>
     </div>
