--- a/RNATranscription/src/main/webapp/index.html
+++ b/RNATranscription/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 
 <!--页面顶层导航区-->
 <nav ng-controller="topnavCtrl">
-    <div id="login_nav" ng-include="menus.url"></div>
+    <div id="login_nav" ng-include="'framework/topnav/topnav.html'"></div>
 </nav>
 
 <!--中间内容区-->
