--- a/RNATranscription/src/main/webapp/framework/topnav/topnav.html
+++ b/RNATranscription/src/main/webapp/framework/topnav/topnav.html
@@ -7,8 +7,10 @@
         </a>
     </div>
 
+    <div class="message" ng-class="message.cls" ng-show="message">{{message.content}}</div>
+
     <!-- 登录注册 -->
-    <div style="float: right;">
+    <div class="login_container" ng-if="!isBackend()&&!hasLogin()">
         <div class="login_btn" ng-click="loginModal('登录')">
             <a>登录</a>
         </div>
@@ -16,17 +18,26 @@
             <a>注册</a>
         </div>
     </div>
+
+    <!-- 用户名 -->
+    <div class="login_container" ng-if="hasLogin()" style="padding-right:15px">
+        {{hasLogin().username}}
+    </div>
 </nav>
 
 <style>
-    .login_btn {
+    .login_container {
+        float: right;
         line-height: 50px;
+    }
+
+    .login_btn {
         padding: 0 15px;
         display: inline-block;
         vertical-align: middle;
         cursor: pointer;
     }
-    
+
     .login_btn:hover,
     .login_btn:hover a {
         color: #097adc;
