--- a/RNATranscription/src/main/webapp/framework/topnav/topnav.html
+++ b/RNATranscription/src/main/webapp/framework/topnav/topnav.html
@@ -21,7 +21,7 @@
 
     <!-- 用户名 -->
     <div class="login_container" ng-if="hasLogin()" style="padding-right:15px">
-        {{hasLogin().username}}
+        {{hasLogin()}}
     </div>
 </nav>
 
