--- a/RNATranscription/src/main/webapp/framework/topnav/topnav.html
+++ b/RNATranscription/src/main/webapp/framework/topnav/topnav.html
@@ -20,8 +20,15 @@
     </div>
 
     <!-- 用户名 -->
-    <div class="login_container" ng-if="hasLogin()" style="padding-right:15px">
-        {{hasLogin()}}
+    <div class="login_container" ng-if="hasLogin()">
+        <div class="login_btn" ng-click="logoutToggle()">
+            {{hasLogin()}} <span class="caret"></span>
+        </div>
+
+        <div id="logout" class="logout_btn" ng-click="logout()">
+            <i class="fa fa-sign-out-alt"></i>
+            登出
+        </div>
     </div>
 </nav>
 
@@ -52,5 +59,25 @@
     .logo {
         height: 50px;
         margin-top: 0;
+    }
+
+    .logout_btn {
+        width: 70px;
+        height: 35px;
+        line-height: 35px;
+        text-align: center;
+        background-color: #fff;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+        position: absolute;
+        right: 0;
+        top: 45px;
+        z-index: 1000;
+        cursor: pointer;
+        display: none;
+    }
+
+    .logout_btn:hover {
+        background-color: #d9ebf1;
+        color: #097adc;
     }
 </style>
